--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,15 @@ nav{
     }
 }
 
+/* POCETNA */
+
+/* POCETNA-KRAJ */
+
+/* USLUGE */
+
+/* USLUGE-KRAJ */
+
+
 /* STRANA RECENZIJE */
 
 .checked {
@@ -164,3 +173,10 @@ nav{
     font-size: 0.9rem;
     color: #4b4b4b;
 }
+/* RECENZIJE-KRAJ */
+
+
+/* KONTAKTI */
+
+
+/* KONTAKTI- KRAJ */
