--- a/css/style.css
+++ b/css/style.css
@@ -231,27 +231,23 @@ nav{
     overflow: hidden;
 }
  
-.logo img:hover{
-    box-shadow: 0px 0px 5px #f4bb00;
-}
-
  
-#mapa{
+ #mapa{
     display: flex;
-    
+ 
     align-items: center;
     flex-direction: column;
     padding-bottom: 75px;
     padding-left: 100px;
     padding-right: 100px;
 }
-
+ 
 .mapa-naslov{
     align-self: center;
     margin-bottom: 20px;
     margin-top: 50px;
 }
-
+ 
 #o-nama {
     display: flex;
     justify-content: center;
@@ -262,11 +258,11 @@ nav{
     width: 100%;
     padding:0 100px;
 }
-
+ 
 #o-nama h2{
     padding-bottom: 20px;
 }
-
+ 
 .cover::after{
     content: '';
     height: 100vh;
@@ -281,20 +277,20 @@ nav{
     transition: all 1000ms;
     z-index: 1;
     
-    
+ 
 }
-
+ 
 .cover:hover::after{
     filter: blur(0px);
     -webkit-filter: blur(0px);
-    
+ 
 }
-
+ 
 .cover:hover .content{
     filter: blur(2px);
     -webkit-filter: blur(2px);
 }
-
+ 
 .content{
     position: absolute;
     z-index: 1;
@@ -307,56 +303,68 @@ nav{
     text-align: center;
     transition: all 1s;
 }
-
+ 
 .content .cover-title {
     color: #f4bb00;
     text-shadow: 2px 2px black;
     font-size: 40px;
     line-height: 2;
 }
-
+ 
 .cover-mini-title{
     color: #f4bb00;
     text-shadow: 2px 2px black;
 }
-
-
+ 
+ 
 .content .logo {
     height: 140px;
     width: 140px;
-}
-
+  }
+ 
 .okvir{
     border: solid #f4bb00 5px;
     line-height: 0;
 }
-
-.osoba{
+ 
+ 
+.ocene-naslov{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 60px;
+}
+ 
+ .ocene-flex{
     display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    align-items: center;
+    flex-wrap: wrap;
 } 
-
+ 
+ .osoba{
+   display: flex;
+   flex-direction: column;
+   margin: 0 auto;
+   align-items: center;
+} 
+ 
 .osoba p{
     text-align: center;
 }
-
+ 
 .osoba img{
     border: solid #f4bb00 3px;
 }
-
+ 
 .slika-osoba{
     height: 200px;
     width: 200px;
     padding: 8px;
 }
-
+ 
 .osoba h3{
     padding:15px 0;
 }
 
-
+ 
 /* POCETNA-KRAJ */
 
 /* USLUGE */
@@ -443,7 +451,6 @@ nav{
         max-width: 100%; 
         font-size: 15px !important;
     }
-
 }
 
 .checked {
